<resources>
    <string name="app_name">JoynPrototype</string>
    <string name="get_otp">Get Otp</string>
    <string name="_812345678">81234567892</string>
    <string name="login">Login</string>
    <string name="image_content">image_content</string>
    <string name="register">Register</string>
    <string name="joyn_resto">Joyn-Resto</string>
    <string name="improve_your_culinary_business">improve your culinary business</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_have_sent_one_time_password_otp_to_the_number">We have sent One Time Password (OTP) to the number</string>
    <string name="enter_otp_in_the_field_below">Enter OTP in the field below</string>
    <string name="change_your_phone_number">Change phone number</string>
    <string name="resend_in_15_minutes">Resend in 15 minutes</string>
    <string name="order">Order</string>
    <string name="time_of_order">Time Of Order</string>
    <string name="driver">Driver :</string>
    <string name="day_month_year">day/month/year</string>
    <string name="masukan_harga_akhir">Masukan harga akhir</string>
    <string name="dari">Dari</string>
    <string name="hingga">Hingga</string>
    <string name="durasi_promo">Durasi Promo</string>
    <string name="harga_setelah_diskon">Harga setelah diskon</string>
</resources>
