<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_otp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_have_sent_one_time_password_otp_to_the_number"
            android:textColor="@color/black80" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+6239823964234"
            android:textColor="@color/black80" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/enter_otp_in_the_field_below"
            android:textColor="@color/black80" />
    </LinearLayout>

    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:focusable="false"
        app:cursorVisible="false"
        app:forceKeyboard="false"
        app:hint="0"
        app:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:password="false"
        app:pinBackground="@color/colorPrimarySoft2"
        app:pinHeight="40dp"
        app:pinLength="4"
        app:pinWidth="40dp"
        app:textSize="@dimen/_9ssp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="@android:color/transparent"
        android:text="Next"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimarySoft"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinview" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton"
        app:layout_constraintVertical_bias="0.96"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tv_changenumber"
                android:padding="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/change_your_phone_number"
                android:background="@color/colorPrimarySoft"/>

            <TextView
                android:id="@+id/tv_resendcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorPrimarySoft3"
                android:padding="@dimen/_3sdp"
                android:text="@string/resend_in_15_minutes"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>