<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.fragment.promo.activity.BuatPromoActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/tolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include layout="@layout/list_item_menu"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/harga_setelah_diskon"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukan_harga_akhir"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/durasi_promo"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_tgl_dari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dari"
                app:layout_constraintEnd_toEndOf="@+id/cv_dari"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tgl_hingga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/hingga"
                app:layout_constraintBottom_toBottomOf="@+id/tv_tgl_dari"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.703"
                app:layout_constraintStart_toEndOf="@+id/tv_tgl_dari"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_dari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tgl_dari">

                <LinearLayout
                    android:id="@+id/ln_date_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgcalEnd"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:padding="5dp"
                        android:src="@drawable/calender" />

                    <TextView
                        android:id="@+id/tv_date_dari"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="@color/colorWhite"
                        android:focusableInTouchMode="false"
                        android:gravity="center_vertical"
                        android:hint="@string/day_month_year"
                        android:padding="3dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="16dp"
                        android:typeface="serif" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_hingga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_tgl_hingga"
                app:layout_constraintStart_toStartOf="@+id/tv_tgl_hingga"
                app:layout_constraintTop_toBottomOf="@+id/tv_tgl_dari"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal">

                    <ImageView

                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:padding="5dp"
                        android:src="@drawable/calender" />

                    <TextView
                        android:id="@+id/tv_date_hingga"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="@color/colorWhite"
                        android:focusableInTouchMode="false"
                        android:gravity="center_vertical"
                        android:hint="@string/day_month_year"
                        android:padding="3dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="16dp"
                        android:typeface="serif" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:layout_marginTop="@dimen/_110sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="Simpan"
            android:textSize="@dimen/_15ssp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>